src/css/base.scss
/* ... */
.dc__ci-pipeline-type-icon {
    width: 20px;
    height: 20px;
    background-size: contain;
    background-image: url('../assets/icons/ic-CI.svg');

    &.normal {
        background-image: url('../assets/icons/ic-CI.svg');
    }

    &.ci_job {
        background-image: url('../assets/icons/ic-job-node.svg');
    }
}

.dc__environment-icon {
    width: 18px;
    height: 18px;
    background-size: contain;
    background-image: url('../assets/icons/ic-env.svg');
}

.xterm .xterm-viewport {
    width: initial !important;
}

// Radius
.dc__bottom-radius-4 {
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
}

.dc__top-radius-4 {
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
}

.dc__top-radius-8 {
    border-top-right-radius: 8px;
    border-top-left-radius: 8px;
}

.dc__no-top-radius {
    border-top-left-radius: 0 !important;
    border-top-right-radius: 0 !important;
}

.dc__no-bottom-radius {
    border-bottom-left-radius: 0 !important;
    border-bottom-right-radius: 0 !important;
}

.dc__no-left-radius {
    border-top-left-radius: 0 !important;
    border-bottom-left-radius: 0 !important;
}

.dc__no-right-radius {
    border-top-right-radius: 0 !important;
    border-bottom-right-radius: 0 !important;
}

.dc__left-radius-4 {
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
}

.dc__right-radius-4 {
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
}

.dc__no-border-radius {
    border-radius: 0 !important;
}

.dc__border-radius-24 {
    border-radius: 24px;
}

.dc__border-radius-50-per {
    border-radius: 50%;
}

.dc__border-radius-50-per-imp {
    border-radius: 50% !important;
}

.dc__border-radius-8-imp {
    border-radius: 8px !important;
}

.dc__border-radius-4-imp {
    border-radius: 4px !important;
}

.dc__no-top-border {
    border-top: 0px !important;
}

.dc__no-bottom-border {
    border-bottom: 0px !important;
}

.dc__no-left-border {
    border-left: 0px !important;
}

.dc__no-right-border {
    border-right: 0px !important;
}

.dc__top-left-radius {
    border-top-left-radius: 4px;
}

.dc__bottom-left-radius-8 {
    border-bottom-left-radius: 8px;
}

input,
textarea,
.bc-n50 {
    background-color: var(--N50);
}

.bc-b50 {
    background-color: var(--B50);

    &--imp {
        background-color: var(--B50) !important;
    }
}

.c-n50 {
    color: var(--N50);
}

.dc__split-header {
    display: flex;
    background-color: var(--N100);
    border-bottom: 1px solid #d6dbdf;
    height: 40px;
    color: var(--N700);
    font-size: 12px;
    font-weight: 600;
    line-height: 40px;
    width: 100%;

    .dc__left-pane {
        width: 49%;
        border-right: 1px solid #d6dbdf;
        padding-left: 10px;
    }

    .dc__right-pane {
        width: 51%;
        padding-left: 25px;

        .apply-change {
            float: right;
            margin-top: 9px;
        }
    }
}

.basic-multi-select>.select__control--is-disabled {
    background-color: var(--N100) !important;
}

.warning-icon-y7 path:nth-child(2) {
    fill: var(--Y700);
}

.warning-icon-y7-imp {
    path {
        &:nth-child(1) {
            fill: transparent !important;
        }

        &:nth-child(2) {
            fill: var(--Y700) !important;
        }

        &:nth-child(3) {
            fill: var(--N0) !important;
        }
    }
}

.warning-icon-y5-imp {
    path {
        &:nth-child(1) {
            fill: transparent !important;
        }

        &:nth-child(2) {
            fill: var(--Y500) !important;
        }

        &:nth-child(3) {
            fill: var(--N900) !important;
        }
    }
}

.ic-in-progress-orange {
    g {
        path {
            &:nth-child(1) {
                fill: var(--O500);
            }

            &:nth-child(2) {
                fill: var(--O200);
            }
        }
    }
}

.ic-env-white {
    g {
        g {
            fill: var(--N0);
        }
    }
}

.alert-icon-r5-imp {
    path {
        &:nth-child(1) {
            fill: transparent !important;
        }

        &:nth-child(2) {
            fill: var(--R500) !important;
        }

        &:nth-child(3) {
            fill: var(--N0) !important;
        }
    }
}

.icon-color-n9 {
    path:nth-child(2) {
        fill: var(--N900);
    }
}

.icon-color-grey {
    fill: #5a5a5a;
}

.icon-color-n7 {
    path:nth-child(1) {
        fill: none !important;
    }

    path:nth-child(2) {
        fill: var(--N700);
    }
}

.icon-color-n6 {
    path:nth-child(1) {
        fill: none !important;
    }

    path:nth-child(2) {
        fill: var(--N600);
    }
}

.info-icon-n5 {
    circle {
        fill: var(--N500);
    }
}

.info-icon-n6 {
    circle {
        fill: var(--N600);
    }
}

.circle-fill-b5 {
    circle {
        fill: var(--B500);
    }
}

.icon-fill-n4 {
    rect {
        fill: var(--N400);
    }
}

.icon-stroke-b5 {

    path,
    rect {
        stroke: var(--B500);
    }
}

.icon-fill-blue-imp path {
    fill: var(--B500) !important;
}

// Text Transform
.dc__lowercase {
    text-transform: lowercase;
}

.dc__uppercase {
    text-transform: uppercase;
}

.dc__capitalize {
    text-transform: capitalize;
}

.dc__first-letter-capitalize {
    text-transform: lowercase;

    &::first-letter {
        text-transform: uppercase;
    }
}

.dc__no-text-transform {
    text-transform: none !important;
}

.dc__react-select__bottom {
    position: sticky;
    bottom: 0px;
    width: 100%;
    border-radius: 4px;
    z-index: 1;
}

.dc__break-word {
    word-wrap: break-word;
}

.dc__word-wrap-anywhere {
    word-wrap: anywhere;
}

.dc__ff-monospace {
    font-family: monospace;
}
/* ... */

